# cachekit

./: .clippy.toml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  QA_MATRIX.md  README.md  SECURITY.md  SPEC.md  STANDARDS.md  TEST_COVERAGE_MATRIX.md  clippy.toml  codecov.yml  gitleaks.toml
.github/workflows/: cargo-deny.yml  pre-commit.yml  release-drafter.yml  security.yml
docs/journeys/: index.md  quick-start.md
docs/research/: SOTA.md
docs/stories/: hello-world.md  index.md
docs/traceability/: index.md
src/: lib.rs
src/adapters/: memory.rs  mod.rs
src/application/: mod.rs  services.rs
src/domain/: cache.rs  errors.rs  mod.rs  policy.rs  ports.rs
src/infrastructure/: error.rs  mod.rs
src/phenotype-cache-adapter/: Cargo.toml
src/phenotype-cache-adapter/src/: lib.rs
tests/: README.md
