[package]
name = "phenotype-cache-adapter"
version = "0.2.0"
edition = "2021"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
dashmap = "5"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
